--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,22 @@
   "description": "Au-pair application backend with Express, TypeScript, PostgreSQL, and Prisma",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "tsc && npx prisma generate",
-    "start": "node dist/index.js",
-    "postinstall": "npx prisma generate",
-    "db:push": "npx prisma db push",
-    "db:migrate": "npx prisma migrate dev",
-    "db:studio": "npx prisma studio",
-    "db:seed": "ts-node prisma/seed.ts",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio",
-    "prisma:migrate": "prisma migrate dev",
-    "test": "echo \"No tests specified\" && exit 0",
-    "lint": "echo \"No linting configured\" && exit 0",
-    "production": "npm run build && npm start"
-  },
+  "dev": "nodemon src/index.ts",
+  "build": "npx prisma db push --accept-data-loss && tsc && npx prisma generate",
+  "start": "node dist/index.js",
+  "postinstall": "npx prisma generate",
+  "db:push": "npx prisma db push",
+  "db:migrate": "npx prisma migrate dev",
+  "db:studio": "npx prisma studio",
+  "db:seed": "ts-node prisma/seed.ts",
+  "prisma:generate": "prisma generate",
+  "prisma:push": "prisma db push",
+  "prisma:studio": "prisma studio",
+  "prisma:migrate": "prisma migrate dev",
+  "test": "echo \"No tests specified\" && exit 0",
+  "lint": "echo \"No linting configured\" && exit 0",
+  "production": "npm run build && npm start"
+},
   "dependencies": {
     "@prisma/client": "^6.11.0",
     "@supabase/supabase-js": "^2.50.2",
